# tsuki-studio

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: lua-video-filter.h  lua_gs.h  lua_helper.h  lua_obs.h  lua_obssource.h  lua_obstypes.h  tsuki-studio.h
lua/: drop-shadow-filter.lua  rotate-mirror-filter.lua
src/: lua-video-filter.cpp  lua_gs.cpp  lua_helper.cpp  lua_helper.cpp~RFa28401.TMP  lua_obs.cpp  lua_obssource.cpp  lua_obstypes.cpp  tsuki-studio.cpp
tools/: release-msbuild.ps1  setup-vs2015.ps1
